1999-08-01	<sopwith@redhat.com>
	* gnomelib-init.c: g_set_prgname(app_id);

1999-07-13    <hp@dhcpd7.redhat.com>

	* gnome-util.c: Remove g_filename_index() and g_filename_pointer()
	cruft (already #if 0)
	(gnome_datadir_file): wrong function name in inline docs
	
1999-06-12  Miguel de Icaza  <miguel@gnu.org>

	* gnome-paper.c (paper_init): Push an empty configuration prefix. 

1999-07-04  Owen Taylor  <otaylor@redhat.com>

	* gnome-i18n.c (compute_locale_variants): Look for
	variants of supplied locale value - e.g., for 
	ja_JP.ujis, look (in order) for ja_JP.ujis, 
	ja_JP, ja.ujis, and ja.

1999-06-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-magic.c (read_string_val): Added break on default clause
	to make it compile with some machines.

1999-06-28  Miroslav Silovic  <silovic@zesoi.fer.hr>

	* gnome-config.h (gnome_config_private_clean_section):
	(gnome_config_private_has_section): replaced Path with path. This
 	seems like an obvious typo, and made apps that call these with any
 	input paremeter other than path fail to compile

1999-06-20  Michael Zucchi  <mzucchi@zedzone.mmc.com.au>

	* gnome-magic.c (read_string_val): Add a limit on the buffer size
	we will read into, and rewritten to be a little more robust.
	Too long records will be truncated silently.
	See bug  #657, #933, #1018 and #591.

	* Makefile.am (INCLUDES): Added ADIOFILE_CFLAGS and ESD_CFLAGS to
	includes list, to allow different installation location.
	(see bug #748)

1999-06-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-url.c (gnome_url_show): Remove debugging message.

1999-05-24  David KAELBLING <drk@sgi.com>

	* gnome-paper.c (gnome_paper_with_size): Removed spurious const attributes.

1999-04-30  Owen Taylor  <otaylor@redhat.com>

	* gnome-moz-remote.c (escape_url): Escape ',' characters
	in URLs as %2c, since ',' characters are used to
	separate the parameters to OpenURL.

1999-04-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>
