@@ -1,3 +1,10 @@
+1999-08-01  Morten Welinder  <terra@diku.dk>
+
+	* gnome-i18n.c (explode_locale): Return modifier in "modifier",
+ 	not in "territory".
+	(compute_locale_variants): Plug a pile of leaks.
+	(gnome_i18n_get_language_list): Plug leak.
+
 1999-08-01	<sopwith@redhat.com>
 	* gnomelib-init.c: g_set_prgname(app_id);
 
